crates/kainetic-macros/tests/ui/tool_unknown_attr.stderr
error: #[tool] unknown attribute `typo_attr` — supported attributes: `description`, `timeout`
  --> tests/ui/tool_unknown_attr.rs:11:48
   |
11 | #[kainetic_macros::tool(description = "Fine.", typo_attr = "oops")]
   |                                                ^^^^^^^^^

warning: unused imports: `ToolContext` and `ToolError`
 --> tests/ui/tool_unknown_attr.rs:1:22
  |
1 | use kainetic_tools::{ToolContext, ToolError};
  |                      ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
